# Kyne-sdk

./: MCP_CLI_GUIDE.md  README.md
csharp/: Kyne.cs
dart/: kyne.dart
examples/: python_example.py
go/: kyne.go  kyne_update.go
java/: Kyne.java
javascript/: kyne.js  package.json  shegerpay.js  shegerpay_update.js
kotlin/: Kyne.kt
php/: Kyne.php  ShegerPay.php  ShegerPay_update.php
python/: kyne.py  pyproject.toml  shegerpay.py
ruby/: kyne.rb  kyne_update.rb  shegerpay.rb
swift/: Kyne.swift
typescript/: README.md  package.json  shegerpay.ts
