[project]
name = "kyne"
version = "1.0.0"
description = "Official Python SDK for Kyne Payment Verification Gateway"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Kyne", email = "support@kyne.com"}
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
]
keywords = ["kyne", "payment", "verification", "ethiopia", "cbe", "telebirr"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://kyne.com"
Documentation = "https://kyne.com/docs"
Repository = "https://github.com/black12-ag/Kyne-sdk.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kyne"]
